--- a/Homework/Mod2/week1/react-groceries/src/index.css
+++ b/Homework/Mod2/week1/react-groceries/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
-    background: url(/img/food-background.jpg);
+    background: url(/src/assets/food-background.jpg);
     background-repeat: repeat;
     background-size: 100vw ;
     font-family: 'Roboto' ;
@@ -12,9 +12,10 @@ body {
     padding: 20px 15px ;
     display: flex;
     text-align: center;
+    justify-content: center;
 }
 .header-title h1{
-margin-bottom: -15px;
+    margin-bottom: -15px;
 }
 .form-container form {
     background-color: #228B22;
@@ -22,6 +23,22 @@ margin-bottom: -15px;
     flex-direction: column;
 }
 
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+
 form h3 {
+    color: white;
+}
+
+.groceryList {
+  background-color: #228B22;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10%;
+}
+
+.listName {
     color: white;
 }
